...
            >
              <View style={styles.sectionContainer}>
                <Page
                  title="First Question"
                  description="What is your favourite lib ?"
                  onPress={useCallback(() => setPage(1), [setPage])}
                  buttonTitle="Go to next question"
                />
              </View>
              <View style={styles.sectionContainer}>
                <Page
                  title="Second Question"
                  description="Why Pager View?"
                  onPress={useCallback(() => setPage(0), [setPage])}
                  buttonTitle="Go to previous question"
                />
              </View>
            </AnimatedPagerView>
          </View>
        </ScrollView>
        <NavigationPanel
...
