appId: ${APP_ID}
# tc23 [Logs] button after being tapped shows the logs
---
- launchApp
- assertVisible: 'PagerView Example'
- tapOn: 'Basic Example'
- assertVisible: 'Basic Example'
- tapOn: 'Logs'
# this log is not present initially on android
#- assertVisible: "Position: 0 Offset: 0"
- assertVisible: 'Page: 0'
#- tapOn: "Logs"
#- assertNotVisible: "Position: 0 Offset: 0"
- tapOn: 'Control'
- assertVisible: 'Last'
- assertVisible: 'Next'
