appId: org.reactjs.native.example.FabricExample
# tc23 [Logs] button after being tapped shows the logs 
---
- launchApp
- assertVisible: "PagerView Example"
- tapOn: "Basic Example"
- assertVisible: "Basic Example"
- tapOn: "Logs"
- assertVisible: "Position: 0 Offset: 0"
- assertVisible: "Page: 0"
- tapOn: "Logs"
- assertNotVisible: "Position: 0 Offset: 0"
- tapOn: "Control"
- assertVisible: "Start"
- assertVisible: "Next"
- clearState